--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,10 @@
 </header>
 
             <section class="page__body">
-    <h1 id="there-will-be-something-here-soon">There will be something here soon</h1>
+    <h1 id="python-notes">Python notes</h1>
+<ul>
+<li><a href="https://ort.soy/posts/properties/">Why you should use property factories in Python</a></li>
+</ul>
 
 
             </section>
